lab9_dir/kustomize/web-app-kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
