lab9_dir/kustomize/web-app-kustomize/base/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  namespace: web-app-k
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:latest
        ports:
        - containerPort: 8080
        args: ["start", "--http-enabled=true", "--hostname-strict=false"]
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: web-app-k
spec:
  selector:
    app: keycloak
  ports:
  - port: 8080
    targetPort: 8080
