lab9_dir/kustomize/web-app-kustomize/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless-service
  namespace: web-app-k
  labels:
    app: postgres
spec:
  ports:
  - name: postgres
    port: 5432
  clusterIP: None
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: web-app-k
  labels:
    app: postgres
spec:
  ports:
  - name: postgres
    port: 5432
  selector:
    app: postgres
