lab9_dir/kustomize/web-app-kustomize/base/postgres-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless-service
  namespace: web-app-k
  labels:
    app: postgres
spec:
  ports:
  - name: postgres
    port: 5432
  clusterIP: None
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: web-app-k
  labels:
    app: postgres
spec:
  ports:
  - name: postgres
    port: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: web-app-k
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres-headless-service
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data

        livenessProbe:
          exec:
            command:
            - /usr/bin/pg_isready
            - "-U"
            - "keycloak"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - /usr/bin/pg_isready
            - "-U"
            - "keycloak"
            - "-d"
            - "keycloakdb"
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
  volumeClaimTemplates:
  - metadata:
      name: pgdata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
